// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentMappings.js returns correct mappings with both overrides and excludes 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "settingsGlobal": "Layout",
}
`;

exports[`getComponentMappings.js returns correct mappings with exclude and no overrides 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
}
`;

exports[`getComponentMappings.js returns correct mappings with exclude containing non-existent component 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "pageGeneral": "PageGeneral",
}
`;

exports[`getComponentMappings.js returns correct mappings with no overrides or exclude 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "pageGeneral": "PageGeneral",
}
`;

exports[`getComponentMappings.js returns correct mappings with override containing non-existent component 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
}
`;

exports[`getComponentMappings.js returns correct mappings with override containing non-existent content type 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "pageGeneral": "PageGeneral",
}
`;

exports[`getComponentMappings.js returns correct mappings with overrides and no exclude 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "pageGeneral": "PageGeneral",
  "settingsGlobal": "Layout",
}
`;

exports[`getComponentMappings.js returns correct mappings with overrides but exclude contains overriden component 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "pageGeneral": "PageGeneral",
}
`;
